--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,12 +52,14 @@
         <item>Released December 6, 2010</item>
         <item>Released February 22, 2011</item>
         <item>Released October 18, 2011</item>
+        <item>Released August 21, 2017</item>
         <item>Released July 9, 2012</item>
         <item>Released October 31, 2013</item>
         <item>Released November 12, 2014</item>
         <item>Released October 5, 2015</item>
         <item>Released August 22, 2016</item>
         <item>Released August 21, 2017</item>
+
     </string-array>
 
 </resources>
